--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/elements/button.sass";
+
+@font-face {
+  font-family: disposableDroid;
+  src: url(./fonts/DisposableDroidBB.otf);
+}
+
 .App {
   text-align: center;
 }
@@ -16,6 +24,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: disposableDroid;
 }
 
 .App-link {
