--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: disposableDroid;
-  src: url(./fonts/DisposableDroidBB.otf);
+  src: url(../../fonts/DisposableDroidBB.otf);
 }
 
 .App {
